Primeiro passo Projeto 01

--- a/Projeto 01/index.html
+++ b/Projeto 01/index.html
@@ -4,8 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visa Transortes LTDA</title>
-</head>
+    <link rel="stylesheet" href="style.css">
+   </head>
 <body>
-    
+    <header>
+        <h1>Visa Transportes LTDA</h1>
+        <nav>
+            <ul>
+                <li><a href="#Inicio">Inicio</a></li>
+                <li><a href="#sobre">Sobre Nós</a></li>
+                <li><a href="#servico">Serviços</a></li>
+                <li><a href="#frota">Nossa Frota</a></li>
+                <li><a href="#orcamento">Orçamento</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="Inicio">
+        <h2>Transporte com Segurança e Agilidade</h2>
+        <p>Especializados no Transporte de veículos, tanques, graneleiros e baús.</p>
+        <button onclick="window location.href="#orcamento"'>Solicitar Orçamento</button>
+            </section>
+     <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p>A Visa Transportes é referência no setor, oferecendo soluções eficientes e seguras para o transporte de cargas em todo o Brasil.</p>
+     </section>
+     <section id="servicos">
+        <ul>
+            <li>Transporte de veículos leves e pesados</li>
+            <li>Transporte de liquídos</li>
+            <li>Transporte de cargas em grãos</li>
+            <li>Transporte de baú e contêineres</li>
+            <li> Logística personalizada para sua empresa</li>
+        </ul>
+     </section>
+     <section id="frota">
+        <h2>Nossa Frota</h2>
+        <p>Contamos com caminhões modernos e equiparados para garantir a Segurança
+            e eficiência no transporte.
+        </p>
+        <div class="gris">
+            <img src="caminhao1.jpg" alt="Caminhão1">
+            <img src="caminhao2.jpg" alt="Caminhao2">
+            <img src="caminhao3.jpg" alt="caminhão3">
+        </div>
+     </section>
+     <section id="orcamento">
+        <h2>Solicite um Orçamento</h2>
+        <p> Entre em contato e solicite uma cotação para sua carga.</p>
+        <button onclick="window.location.href=#contato">Fale Conosco</button>
+     </section>
+     <section id="contato">
+        <h2>Entre  Contato</h2>
+        <p>Telefone:(XX)XXXXX-XXXX</p>
+        <p>E-mail: contato@visatransportes.com.br</p>
+        <p>Endereçõ:Rua Exemplo, 123 - Cidade Uberlândia Estado MG</p>
+        <p>Sigs-nos nas redes sociais para mais novidades!</p>
+     </section>
+     <footer>
+        <p>&copy;2025 Visa Transportes. Todos os direitos reservados.</p>
+     </footer>
 </body>
 </html>
