--- a/Projeto 01/index.html
+++ b/Projeto 01/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
    </head>
 <body>
-    <header>
+        <header>
+       
         <h1>Visa Transportes LTDA</h1>
         <nav>
             <ul>
@@ -44,9 +45,9 @@
             e eficiência no transporte.
         </p>
         <div class="gris">
-            <img src="caminhao1.jpg" alt="Caminhão1">
-            <img src="caminhao2.jpg" alt="Caminhao2">
-            <img src="caminhao3.jpg" alt="caminhão3">
+            <img src="img/Caminhao Graneleiro.jpeg"  alt="Caminhão1">
+            <img src="img/Imagem Bau .jpeg"alt=.jpeg" alt="Caminhao2">
+            <img src="img/Caminhao Tanque.jpeg" alt="caminhão3">
         </div>
      </section>
      <section id="orcamento">
