--- a/Teste.html
+++ b/Teste.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
-<head>
-    <title>APENAS UM TESTE</title>
-    <meta name"author"content="Fulano de Tal">
-    <meta name"description"content="descrição desta página...">
-    <meta name="Keyworda"content="apredizagem, html, páginas">
-   
-   
-   
-   
-   
-   
-    <body>
+<html lang="pt-BR">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title> Testando Formulário</title>
+        <meta name="description" content="Criação de formulario HTML>
+        <meta http-equiv="Content-Type">
+    </head>
+<h1>Formulário para dados Pessoais</h1>
+<form action="DadosPessoais.php"method="post">
+<fieldset>
+    <legend>Informaçãoes do Usiario</legend>
+    <table cellspacing="8>"
+        <tr>
+            <td>
 
+            </td>
+        </tr>
+     <td>
+        <label for=""nome">Nome:</label>
+    </td>
+<td align="left">
+    <input type="text"name="nome"value="Digite o seu nome">
+    </td>
+<tr>
+     <td>
+        <label> data de nascimento:</label>
+     </td>
+    <td align="left">
+        <input type="text"name="dia"size="2"maxlength="2"value="dd">
+        <input type="text"name="mes"size="2"maxlength="2"value="mm">
+        <input type="text"name="ano"size="4"maxlength="4"value="aaa">
+    </td>
+</tr>
+<tr>
+    <td>
+        <label for="Reg">Região:</label>
+    </td>
+    <td aling="left">
+    <select name="Reg">
+        <option value="N">Norte</option>
+        <option value="NE">Nordeste</option>
+        <option value="CO">Centro-oeste</option>
+        <option value="SE">Sudeste</option>
+        <option value="S">Sul</option>
+        </select>
+    </td>
+    <td>
+          <label for="senha">Senha:</label>
+        </td>
+        <td align="left">
+            <input type="passaword"name="senha">
+        </td>
+        </tr>
+        </table>
+
+        </fieldset>
+        <input type="submit"value="Enviar">
+        <input type="reset"value="Limpar Formulário">
+        </form>
+         
     </body>
-</head>
+    </html>
