Alterando um linha

--- a/Aluguel Predio/Index.html
+++ b/Aluguel Predio/Index.html
@@ -26,8 +26,8 @@
                 <h2>Prédio Comercial – Setor Industrial</h2>
                 <p><strong>Endereço:</strong> Av. José Andraus Gassani, 5655</p>
                 <p>Espaço amplo, excelente infraestrutura, ideal para empresas e indústrias.</p>
-                <p>Na Avenida princípal</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.525530283458!2d-48.32450052453106!3d-18.97586024502512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a445331d89d451%3A0x94d85e8b13a1e1b1!2sAv.%20Jos%C3%A9%20Andraus%20Gassani%2C%205655%20-%20Uberl%C3%A2ndia%2C%20MG!5e0!3m2!1spt-BR!2sbr!4v1707303741234" allowfullscreen></iframe>
+                <p>Avenida princípal</p>
+                <iframe title="Mapa do Prédio Comercial – Setor Industrial" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.525530283458!2d-48.32450052453106!3d-18.97586024502512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a445331d89d451%3A0x94d85e8b13a1e1b1!2sAv.%20Jos%C3%A9%20Andraus%20Gassani%2C%205655%20-%20Uberl%C3%A2ndia%2C%20MG!5e0!3m2!1spt-BR!2sbr!4v1707303741234" allowfullscreen></iframe>
                 <a class="botao" href="tel:+5534991921411">Ligar Agora</a>
             </div>
             <img src="img/JAG01.jpeg" alt="Prédio Comercial - Setor Industrial">
@@ -38,7 +38,7 @@
                 <h2>Apartamento – 3º Andar</h2>
                 <p><strong>Endereço:</strong> Rua Geraldinho Martins, 590</p>
                 <p>Confortável, bem localizado e seguro.</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.525530283458!2d-48.32450052453106!3d-18.97586024502512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a445331d89d451%3A0x94d85e8b13a1e1b1!2sRua%20Geraldinho%20Martins%2C%20590%20-%20Uberl%C3%A2ndia%2C%20MG!5e0!3m2!1spt-BR!2sbr!4v1707303745678" allowfullscreen></iframe>
+                <iframe title="Mapa do Apartamento – 3º Andar" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.525530283458!2d-48.32450052453106!3d-18.97586024502512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a445331d89d451%3A0x94d85e8b13a1e1b1!2sRua%20Geraldinho%20Martins%2C%20590%20-%20Uberl%C3%A2ndia%2C%20MG!5e0!3m2!1spt-BR!2sbr!4v1707303745678" allowfullscreen></iframe>
                 <a class="botao" href="tel:+5534991911411">Ligar Agora</a>
             </div>
            <img src="img/Apto GM02.jpeg" alt="Apartamento - 3º Andar">
