--- a/Aluguel Predio/Index.html
+++ b/Aluguel Predio/Index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluguel de Imóveis</title>
+    <link rel="stylesheet" href="index.css">
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f9f9f9; }
         .container { max-width: 900px; margin: 40px auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
@@ -40,13 +41,14 @@
                 <p>Confortável, bem localizado e seguro.</p>
                 <iframe title="Mapa do Apartamento – 3º Andar" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.525530283458!2d-48.32450052453106!3d-18.97586024502512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a445331d89d451%3A0x94d85e8b13a1e1b1!2sRua%20Geraldinho%20Martins%2C%20590%20-%20Uberl%C3%A2ndia%2C%20MG!5e0!3m2!1spt-BR!2sbr!4v1707303745678" allowfullscreen></iframe>
                 <a class="botao" href="tel:+5534991911411">Ligar Agora</a>
+                <
             </div>
            <img src="img/Apto GM02.jpeg" alt="Apartamento - 3º Andar">
+           
         </div>
     </div>
 
-    <foote>
+   
         <p>Email:roberto@tranportadorabrasilnorte.com.br</p>
-    </foote>
-</body>
+    </body>
 </html>
