--- a/Projeto 01/index.html
+++ b/Projeto 01/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visa Transortes LTDA</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Visa Transportes LTDA</title>
+    <link rel="stylesheet" href="styles.css">
    </head>
 <body>
         <header>
